# guardian-protocol

./: .gitignore  README.md
guardian-ui/: decode_data.ts  dump_accounts.ts  fetch_expiry.ts  fetch_expiry_direct.ts  find_all_assignments.ts  get_expiry.ts  package-lock.json  package.json
guardian-ui/src/app/: globals.css  layout.tsx
guardian-ui/src/app/(dashboard)/: layout.tsx  page.tsx
guardian-ui/src/components/layout/: navbar.tsx  sidebar.tsx
guardian-ui/src/components/providers/: solana-provider.tsx
guardian-ui/src/hooks/: use-anchor-program.ts  use-circuits.ts  use-locks.ts  use-orchestrator.ts  use-rbac.ts
guardian-ui/src/lib/: utils.ts
guardian-ui/src/lib/anchor/: index.ts
guardian_protocol/: Anchor.toml  README.md  package-lock.json  package.json
guardian_protocol/programs/circuit_breaker/: Cargo.toml
guardian_protocol/programs/circuit_breaker/src/: lib.rs  (+1 more)
guardian_protocol/programs/lock_manager/: Cargo.toml
guardian_protocol/programs/orchestrator/: Cargo.toml
guardian_protocol/programs/orchestrator/src/: errors.rs  lib.rs
guardian_protocol/programs/orchestrator/src/instructions/: mod.rs  protected_operation.rs
guardian_protocol/programs/rbac/: Cargo.toml
guardian_protocol/scripts/: acquire_lock_demo.js  acquire_vault_lock.js  check_admin.js  check_authority.js  check_vault.js  close_test_lock.js  demo_setup_final.js  mutex_demo.js  release_lock_demo.js  reset_circuits_demo.js  reset_demo.js  setup_demo.js  test_rbac_fetch.js  test_ui_fetch.js
guardian_protocol/tests/: circuit_breaker.ts  lock_manager.ts  orchestrator.ts  rbac.ts
(+51 files in other folders)
